[package]
name = "rs_example"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_example"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use rs_example;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.15.1", features = ["extension-module"] }
numpy = "0.15.1"
ndarray = "0.15.4"
